--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
 name: Deploy to GitHub Pages
 
 on:
-  push:
-    branches:
-      - main  # Set this to your default branch
+  # push:
+  #   branches:
+  #     - main  # Set this to your default branch
   workflow_dispatch:
 
 permissions:
